# shelly-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  config.json  docker-compose.yml  pyproject.toml  shelly_config.json
.cursor/rules/: python.md  python.mdc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_compatibility.yml  feature_request.yml
.github/workflows/: api-ci.yml  cli-ci.yml  core-ci.yml  release.yml  web-ci.yml
src/: __init__.py  actions.py  cli.py  config.py  exporter.py  main.py  models.py  network.py  scanner.py  ui.py
